good lord what is happening in there?
