# src/shared/database/models/EditQueue.ts
@@ -3,8 +3,8 @@ import { sendEditLog, WebhookLogType } from "../../ModWebhooks.ts";
 import { Logger } from "../../Logger.ts";
 import { DatabaseHelper, Status } from "../DBHelper.ts";
 import { User } from "./User.ts";
-import { Project, ProjectEdit, ProjectInfer } from "./Mod.ts";
-import { Version, VersionEdit, VersionInfer } from "./ModVersion.ts";
+import { Project, ProjectEdit, ProjectInfer } from "./Project.ts";
+import { Version, VersionEdit, VersionInfer } from "./Version.ts";
 
 export class EditQueue extends Model<InferAttributes<EditQueue>, InferCreationAttributes<EditQueue>> {
     declare readonly id: CreationOptional<number>;
@@ -19,23 +19,23 @@ export class EditQueue extends Model<InferAttributes<EditQueue>, InferCreationAt
     declare readonly updatedAt: CreationOptional<Date>;
     declare readonly deletedAt: CreationOptional<Date> | null;
 
-    public isModVersion(): this is EditQueue & { objectTableName: `modVersions`, object: VersionEdit } {
-        let hasModVersionKeys = `modVersion` in this.object ||
+    public isVersion(): this is EditQueue & { objectTableName: `modVersions`, object: VersionEdit } {
+        let hasVersionKeys = `modVersion` in this.object ||
             `platform` in this.object ||
             `supportedGameVersionIds` in this.object ||
             `dependencies` in this.object;
-        return this.objectTableName === `modVersions` && hasModVersionKeys;
+        return this.objectTableName === `modVersions` && hasVersionKeys;
     }
 
-    public isMod(): this is EditQueue & { objTableName: `mods`, object: ProjectEdit } {
-        let hasModKeys = `name` in this.object ||
+    public isProject(): this is EditQueue & { objTableName: `mods`, object: ProjectEdit } {
+        let hasProjectKeys = `name` in this.object ||
             `summary` in this.object ||
             `description` in this.object ||
             `category` in this.object ||
             `gitUrl` in this.object ||
             `authorIds` in this.object ||
             `gameName` in this.object;
-        return this.objectTableName === `mods` && hasModKeys;
+        return this.objectTableName === `mods` && hasProjectKeys;
     }
 
     public async approve(approver: User, bypassApproval: boolean = false): Promise<Project | Version | undefined> {
@@ -47,39 +47,39 @@ export class EditQueue extends Model<InferAttributes<EditQueue>, InferCreationAt
         let original: ProjectInfer | VersionInfer | undefined = undefined;
 
         if (this.objectTableName == `modVersions` && `modVersion` in this.object) {
-            let modVersion = await DatabaseHelper.database.Versions.findByPk(this.objectId);
-            if (modVersion) {
-                original = modVersion.toJSON();
-                modVersion.modVersion = this.object.modVersion || modVersion.modVersion;
-                modVersion.platform = this.object.platform || modVersion.platform;
-                modVersion.supportedGameVersionIds = this.object.supportedGameVersionIds || modVersion.supportedGameVersionIds;
-                modVersion.dependencies = this.object.dependencies || modVersion.dependencies;
-                //modVersion.lastApprovedById = approver.id;
-                modVersion.lastUpdatedById = this.submitterId;
-                //modVersion.status = Status.Verified;
-                if (modVersion.status == Status.Verified) {
-                    modVersion.lastApprovedById = approver.id;
+            let version = await DatabaseHelper.database.Versions.findByPk(this.objectId);
+            if (version) {
+                original = version.toJSON();
+                version.modVersion = this.object.modVersion || version.modVersion;
+                version.platform = this.object.platform || version.platform;
+                version.supportedGameVersionIds = this.object.supportedGameVersionIds || version.supportedGameVersionIds;
+                version.dependencies = this.object.dependencies || version.dependencies;
+                //version.lastApprovedById = approver.id;
+                version.lastUpdatedById = this.submitterId;
+                //version.status = Status.Verified;
+                if (version.status == Status.Verified) {
+                    version.lastApprovedById = approver.id;
                 }
-                record = await modVersion.save();
+                record = await version.save();
             }
         } else if (this.objectTableName == `mods` && `name` in this.object) {
-            let mod = await DatabaseHelper.database.Projects.findByPk(this.objectId);
-            if (mod) {
-                original = mod.toJSON();
-                mod.name = this.object.name || mod.name;
-                mod.summary = this.object.summary || mod.summary;
-                mod.description = this.object.description || mod.description;
-                mod.category = this.object.category || mod.category;
-                mod.gitUrl = this.object.gitUrl || mod.gitUrl;
-                mod.authorIds = this.object.authorIds || mod.authorIds;
-                mod.gameName = this.object.gameName || mod.gameName;
-                //mod.lastApprovedById = approver.id;
-                mod.lastUpdatedById = this.submitterId;
-                //mod.status = Status.Verified;
-                if (mod.status == Status.Verified) {
-                    mod.lastApprovedById = approver.id;
+            let project = await DatabaseHelper.database.Projects.findByPk(this.objectId);
+            if (project) {
+                original = project.toJSON();
+                project.name = this.object.name || project.name;
+                project.summary = this.object.summary || project.summary;
+                project.description = this.object.description || project.description;
+                project.category = this.object.category || project.category;
+                project.gitUrl = this.object.gitUrl || project.gitUrl;
+                project.authorIds = this.object.authorIds || project.authorIds;
+                project.gameName = this.object.gameName || project.gameName;
+                //project.lastApprovedById = approver.id;
+                project.lastUpdatedById = this.submitterId;
+                //project.status = Status.Verified;
+                if (project.status == Status.Verified) {
+                    project.lastApprovedById = approver.id;
                 }
-                record = await mod.save();
+                record = await project.save();
             }
         }
         this.approved = true;
@@ -102,7 +102,7 @@ export class EditQueue extends Model<InferAttributes<EditQueue>, InferCreationAt
             return;
         }
 
-        //let record = this.isMod() ? await DatabaseHelper.database.Mods.findByPk(this.objectId) : await DatabaseHelper.database.ModVersions.findByPk(this.objectId);
+        //let record = this.isMod() ? await DatabaseHelper.database.Projects.findByPk(this.objectId) : await DatabaseHelper.database.ModVersions.findByPk(this.objectId);
         this.approved = false;
         this.approverId = approver.id;
         this.save().then(() => {
